# CodeCraftHW

./: log.txt  out.txt
data/: cpp_py.txt  output.txt
ecs/: .gitignore  CMakeLists.txt  ExpoentialSmooth.cpp  ExponentialSmooth.h  PolynomialCurveFitting.cpp  PolynomialCurveFitting.h  code.cpp  code.h  date.cpp  date.h  ecs.cpp  fit.cpp  fit.h  graph.py  init.cpp  init.h  lstm.cpp  predict.cpp  predict.h  refuse.h
ecs/data/: cpp_py.txt  input1.txt  input2.txt  input3.txt  output.txt
ecs/data/contest0/: input0.txt  input2.txt  input3.txt  input4.txt  input5.txt
ecs/data/contest1/: Data.txt  Test.txt  allData.txt  input1.txt  input_3hosttypes_5flavors_1week.txt  lstmDebug.txt  lstmDebug1.txt  output.txt
